2.7.4 - 17/08/2015
Added:
- Support httpie for downloading
- Remove packages with by TAG
Fixed:
- Resolving dependencies message for sbo repository when search for matching
packages
- Build error message
Updated:
- Install SBo packages with specific build number

2.7.3 - 13/08/2015
Added:
- Tree view for deps-status command
Fixed:
- pasture/ directory for Slackware 14.0
Updated:
- Comments for Slackware ARM users in REPOSITORIES and slpkg.conf file
- slackpkg sync with ChangeLog.txt file

2.7.2 - 10/08/2015
Added:
- Support Slackware ARM
Fixed:
- The package build when the sources more than one with the option
"--autobuild"
Updated:
- Manager to improve installed packages
- setup.py requirements

2.7.1 - 08/08/2015
Fixed:
- Remove package when partial name is supplied #34
- Removing a package states "package not found" #35
- Remove and install references

2.7.0 - 06/08/2015
Fixed:
- EOFError when user interrupt with "ctrl + d"
Updated:
- Replace sys.sxit(0) with raise SystemExit() and remove unused sys module
- Code, doc strings
- Slackware mirrors

2.6.9 - 31/07/2015
Added:
- new-config command to manage .new configuration files
Fixed:
- Ignore check packages with version "blacklist" from binary repositories
Updated:
- slpkg.SlackBuild script
- Read Slackware version function

2.6.8 - 30/07/2015
Fixed:
- SBo dependencies installation order

2.6.7 - 28/07/2015
Fixed:
- Fix typo #32
Added:
- graph-easy optional require to draw dependencies ascii diagram

2.6.6 - 25/07/2015
Added:
- Dependencies status (command deps-status) message if no logs found
- Optional pygraphviz module to drawing image map dependencies
Updated:
- Write dependencies logs with full packages

2.6.5 - 23/07/2015
Added:
- Dependencies status command
- Check if dependencies used in option "--tracking"
Fixed:
- Create 'core/' directory for Slackware repository

2.6.4 - 21/07/2015
Updated:
- Merge functions into class
Fixed:
- Auto detect Slackware packages